[project]
name = "metadatamd"
version = "0.1.0"
description = "Frontmatter reader and editor for Markdown files."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]